Throw DomException when playbackRate is unsupported by default.

This turns on the change to throw a NotSupportedError
DomException when playbackRate is unsupported on stable.

Intent to implement/ship: https://groups.google.com/a/chromium.org/forum/#!msg/blink-dev/a0tguvcZZyk/QJjO8R3WFgAJ

Bug: 747082
Change-Id: I10cc98bb052172683dc5208914bc1b5aaecdd7ff
Reviewed-on: https://chromium-review.googlesource.com/777772
Commit-Queue: apacible <apacible@chromium.org>
Reviewed-by: Dale Curtis <dalecurtis@chromium.org>
Reviewed-by: Mounir Lamouri <mlamouri@chromium.org>
Reviewed-by: Philip Jägenstedt <foolip@chromium.org>
Cr-Commit-Position: refs/heads/master@{#517994}
Former-commit-id: a34b99b70385b4dcf97b04f2c41e76e6ca3e314c